--- a/data_refactoring.ipynb
+++ b/data_refactoring.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -31,13 +31,16 @@
     "refactor_multi_value()\n",
     "df['sex'] = df['sex'].map({'M': 0, 'F': 1})\n",
     "df['ane_type'] = df['ane_type'].map({'General': 0, 'Spinal': 1})\n",
+    "df['is_tubesize'] = df['tubesize'].map(lambda x: 0 if x == 'None' else (1 if type(x) is not float else x))\n",
+    "df['tubesize_value'] = df['tubesize'].map(lambda x: 0 if x == 'None' else x)\n",
     "\n",
+    "df.drop('tubesize', axis=1, inplace=True)\n",
     "df.to_csv('colorectal_refactored.csv', index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "outputs": [],
    "source": [],
    "metadata": {
@@ -49,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "outputs": [],
    "source": [],
    "metadata": {
