add tubesize categorization

--- a/data_refactoring.ipynb
+++ b/data_refactoring.ipynb
@@ -2,11 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['anestart', 'optime', 'adm', 'dis', 'icu_days', 'age', 'sex', 'height',\n",
+      "       'weight', 'bmi', 'asa', 'emop', 'approach', 'position', 'ane_type',\n",
+      "       'preop_htn', 'preop_dm', 'preop_pft', 'preop_hb', 'preop_plt',\n",
+      "       'preop_pt', 'preop_aptt', 'preop_na', 'preop_k', 'preop_gluc',\n",
+      "       'preop_alb', 'preop_ast', 'preop_alt', 'preop_bun', 'preop_cr',\n",
+      "       'airway', 'tubesize', 'iv1', 'iv2', 'intraop_ebl', 'intraop_uo',\n",
+      "       'intraop_rbc', 'intraop_ffp', 'intraop_crystalloid', 'intraop_colloid',\n",
+      "       'intraop_ppf', 'intraop_mdz', 'intraop_ftn', 'intraop_rocu',\n",
+      "       'intraop_eph', 'intraop_phe', 'intraop_epi', 'intraop_ca', 'optime.1'],\n",
+      "      dtype='object')\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -22,7 +39,7 @@
     "        df[initial_column + \"_\" + str(value)] = np.where(df[initial_column].isna(), np.nan, df[initial_column + \"_\" + str(value)])\n",
     "\n",
     "def refactor_multi_value():\n",
-    "    columns = ['approach', 'position', 'preop_pft', 'airway', 'iv1', 'iv2']\n",
+    "    columns = ['approach', 'position', 'preop_pft', 'airway', 'iv1', 'iv2', 'tubesize']\n",
     "    for column in columns:\n",
     "        new_columns = df[column].unique()\n",
     "        create_new_columns(new_columns, column)\n",
@@ -31,10 +48,7 @@
     "refactor_multi_value()\n",
     "df['sex'] = df['sex'].map({'M': 0, 'F': 1})\n",
     "df['ane_type'] = df['ane_type'].map({'General': 0, 'Spinal': 1})\n",
-    "df['is_tubesize'] = df['tubesize'].map(lambda x: 0 if x == 'None' else (1 if type(x) is not float else x))\n",
-    "df['tubesize_value'] = df['tubesize'].map(lambda x: 0 if x == 'None' else x)\n",
     "\n",
-    "df.drop('tubesize', axis=1, inplace=True)\n",
     "df.to_csv('colorectal_refactored.csv', index=False)"
    ]
   },
